...
    private lazy var searchBar: UISearchBar = {
        let bar = UISearchBar()
        bar.placeholder = "Find words..."
        bar.delegate = self
        bar.searchBarStyle = .minimal
        bar.returnKeyType = .search
        bar.searchTextField.accessibilityIdentifier = "search-input"
        return bar
    }()

    private lazy var wildcardToolbar: WildcardToolbarView = {
        let toolbar = WildcardToolbarView()
        toolbar.resolveTextField = { [weak self] in
...
        // Cell registration
        let cellRegistration = UICollectionView.CellRegistration<UICollectionViewListCell, DataMuseWord> { cell, indexPath, word in
            cell.contentConfiguration = UIHostingConfiguration {
                WordView(word: word)
            }
            cell.accessories = [.disclosureIndicator()]
            cell.accessibilityIdentifier = "word-list-word-view"
        }

        dataSource = UICollectionViewDiffableDataSource(collectionView: collectionView) { collectionView, indexPath, word in
            collectionView.dequeueConfiguredReusableCell(using: cellRegistration, for: indexPath, item: word)
        }
    }
...
